--- a/about.html
+++ b/about.html
@@ -102,13 +102,8 @@
   </div>
 
   <div>
-    <h1>Worth Knowing</h1>
-    <ul>Creative</ul>
-    <ul>Outgoing and honest</ul>
-    <ul>Goal-oriented</ul>
-    <ul>Smiling and happy</ul>
-    <ul>Diligent</ul>
-    <ul>Caring</ul>
+    <h1>Words about me</h1>
+    <img id="words" src="pictures/words.png" alt="This is the little piggie">
     <br>
   </div>
 
