--- a/basic-ux.html
+++ b/basic-ux.html
@@ -75,47 +75,47 @@
             <li class="card-item double">
                 <a href="#">
                     <figure class="card">
-                        <img src="pictures/code-square.png" alt="A man fishing.">
+                        <img src="pictures/rekreate.jpg" alt="A man fishing.">
                         <figcaption class="caption">
-                            <h3 class="caption-title">Basic Web Design</h3>
+                            <h3 class="caption-title">Report - idea presentation</h3>
               <p>Fishing can be exciting. When a duck tries to get your fish. But just remember - It's your fish. </p>
                         </figcaption>
                     </figure>
                 </a>
             </li>
             <li class="card-item">
-                <a href="#">
+                <a href="http://www.kmjdesign.dk/webpage/rekreate/" target="_blank">
                     <figure class="card">
-                        <img src="pictures/prex-square.png" alt="A girl decorating a tree for christmas.">
+                        <img src="pictures/rekreate-web.png" alt="A girl decorating a tree for christmas.">
                         <figcaption class="caption">
-                            <h3 class="caption-title">Basic Animation</h3>
+                            <h3 class="caption-title">ReKreate Website</h3>
               <p>Take your best friend out on a trip to spread out the love that's growing in your heart.</p>
                         </figcaption>
                     </figure>
                 </a>
             </li>
             <li class="card-item">
-                <a href="#">
+                <a href="#" target="_blank">
                     <figure class="card">
-                        <img src="pictures/desk-square.png" alt="Wineyards from Italy.">
+                        <img src="pictures/style-guide.png" alt="A girl decorating a tree for christmas.">
                         <figcaption class="caption">
-                            <h3 class="caption-title">Basic UX</h3>
-              <p>Wineyards, beautiful trees and old houses. Italy when it looks the best. Just pure beauty in one painting.</p>
+                            <h3 class="caption-title">Report - Style guide</h3>
+              <p>Take your best friend out on a trip to spread out the love that's growing in your heart.</p>
                         </figcaption>
                     </figure>
                 </a>
             </li>
             <li class="card-item">
-                <a href="#">
-                    <figure class="card">
-                        <img src="pictures/premiere-square.png" alt="An air balloon made of a lightbulp.">
-                        <figcaption class="caption">
-                            <h3 class="caption-title">Basic Video</h3>
-              <p>Just one day - Go up to the stars with my in a balloon of ideas. Take me to the moon and keep dreaming.</p>
-                        </figcaption>
-                    </figure>
-                </a>
+              <figcaption class="caption">
+                    <p>All off the videos in this project was filmed with a phone and a gimble. The gimble was helping giving a steady filming, which improves the experience for the user.
+                    <br><br>
+                    After filming all of the editing was done with Adobes Premiere Pro. With this program we where able to make mask, tracing the people of the video, and making a fluent video combined with the music.
+                    <br><br>
+                    If you are interested in more knowledge of how the idea came to life, you can see the storyboard, which gave life to City Walk and Meetup. <a href="http://kmjdesign.dk/portfolio/story-board-city.pdf" target="_blank">Find the storyboard here.</a>
+              </p></figcaption>
             </li>
+
+
         </ul>
     </main>
 <footer class="colophon">
