--- a/basic-video.html
+++ b/basic-video.html
@@ -88,17 +88,18 @@
                         <img src="pictures/life-passing-by.png" alt="A girl decorating a tree for christmas.">
                         <figcaption class="caption">
                             <h3 class="caption-title">Life Passing By</h3>
-              <p>This website was only made for mobile - I tried creating a burger menu for the first time.</p>
+              <p>Life Passing By was a project of 3 days. First day was creating a story through one of three titels. We chose to go with "people who are to busy",  which we wanted to show by a person not paying attention to their surroundings.</p>
                         </figcaption>
                     </figure>
                 </a>
             </li>
             <li class="card-item">
               <figcaption class="caption">
-                <h1>Basic Video</h1>
-                    <br>
-                    <p>The video weeks where so much fun! We had to be creative with a camera, thinking of new ways to show the audience our ideas.
+                    <p>All off the videos in this project was filmed with a phone and a gimble. The gimble was helping giving a steady filming, which improves the experience for the user.
                     <br><br>
+                    After filming all of the editing was done with Adobes Premiere Pro. With this program we where able to make mask, tracing the people of the video, and making a fluent video combined with the music.
+                    <br><br>
+                    If you are interested in more knowledge of how the idea came to life, you can see the storyboard, which gave life to City Walk and Meetup. <a href="http://kmjdesign.dk/portfolio/story-board-city.pdf" target="_blank">Find the storyboard here.</a>
               </p></figcaption>
             </li>
         </ul>
