--- a/basic-ux.html
+++ b/basic-ux.html
@@ -73,7 +73,7 @@
 </p></figcaption>
             </li>
             <li class="card-item double">
-                <a href="#">
+                <a href="http://www.kmjdesign.dk/portfolio/reKreate_report.pdf" target="_blank">
                     <figure class="card">
                         <img src="pictures/rekreate.jpg" alt="A man fishing.">
                         <figcaption class="caption">
@@ -95,7 +95,7 @@
                 </a>
             </li>
             <li class="card-item">
-                <a href="#" target="_blank">
+                <a href="http://www.kmjdesign.dk/portfolio/reKreate_design-documentation.pdf" target="_blank">
                     <figure class="card">
                         <img src="pictures/style-guide.png" alt="A girl decorating a tree for christmas.">
                         <figcaption class="caption">
