--- a/contact.html
+++ b/contact.html
@@ -61,23 +61,23 @@
 
 
 <div class="container" id="wrapperAbout">
-  <form id="contact" action="" method="post">
+  <form id="contact" action="mailto:mj.design@outlook.dk?subject=Questions" name="kontaktFormular" enctype="text/plain" method="post">
     <h3>Quick Contact</h3>
     <h4>Contact us today, and get reply with in 24 hours!</h4>
     <fieldset>
-      <input placeholder="Your name" type="text" tabindex="1" required autofocus>
+      <input placeholder="Your name" name="name" id="inputname" type="text" tabindex="1" required autofocus>
     </fieldset>
     <fieldset>
-      <input placeholder="Your Email Address" type="email" tabindex="2" required>
+      <input placeholder="Your Phone Number" name="number" id="inputphone" type="tel" tabindex="3" required>
     </fieldset>
     <fieldset>
-      <input placeholder="Your Phone Number" type="tel" tabindex="3" required>
+      <input placeholder="Subject" id="subject" name="subject" type="text" tabindex="4" required autofocus>
     </fieldset>
     <fieldset>
-      <textarea placeholder="Type your Message Here...." tabindex="5" required></textarea>
+      <textarea placeholder="Type your Message Here...." name="message" id="textToDesigner" tabindex="5" required></textarea>
     </fieldset>
     <fieldset>
-      <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
+      <button id="button_send" type="submit" id="contact-submit" data-loading-text="Sending...">Submit</button>
     </fieldset>
   </form>
  </div>
