--- a/basic-animation.html
+++ b/basic-animation.html
@@ -68,8 +68,10 @@
 <figcaption class="caption">
   <h1>Basic Animation</h1>
       <br>
-      <p>Through the first half year of my education on kea, i have worked with basic web design, basic animation, basic user experience and basic video. This site is going to show you some of my projects within these areas.
-      <br><br>
+      <p>In the weeks of basic animation, we where taught how to use JavaScript to make our items move online. We had to draw and design characters, which had move with either spritesheets or just my moving the character on the screen.
+      <br>
+      The animation could be sound or motion, giving the character life.
+      <br>
 </p></figcaption>
             </li>
             <li class="card-item double">
@@ -89,7 +91,9 @@
                         <img src="pictures/computer.jpg" alt="A girl decorating a tree for christmas.">
                         <figcaption class="caption">
                             <h3 class="caption-title">Character design</h3>
-              <p>Take your best friend out on a trip to spread out the love that's growing in your heart.</p>
+              <p>Character design is  more than just drawing a person, it's giving something life. It's about telling the story of the person. Who is this? What is his main goal? How is he working social?
+                <br>
+              It has to be considered which colors should be chosen to this person. Each color has a different meaning, so everything has to be taking into consideration.</p>
                         </figcaption>
                     </figure>
                 </a>
