--- a/basic-web.html
+++ b/basic-web.html
@@ -68,7 +68,9 @@
 <figcaption class="caption">
   <h1>Basic Web Design</h1>
       <br>
-      <p>Through the first half year of my education on kea, i have worked with basic web design, basic animation, basic user experience and basic video. This site is going to show you some of my projects within these areas.
+      <p>Our first subject on KEA was basic webdesign. The goal for theese weeks, was to learn how to hand code a responsive website, only with the use of HTML and CSS. For a website to be created properly, we had to do a moodboard, a color scheme, a typography choosing, a sketch for the logo and image assets. Basicly we had to decide on all of the content of the website, before even starting on it.
+        <br><br>
+      When it had been decided what to put into the website, we where told to make a prototype as a start, which makes it more understandable, what is going to actually be the website.
       <br><br>
 </p></figcaption>
             </li>
@@ -78,11 +80,13 @@
                         <img src="pictures/kilkee.png" alt="A man fishing.">
                         <figcaption class="caption">
                             <h3 class="caption-title">Redesign - Thalasso Therapy</h3>
-              <p>To get access to the webpage:
+              <p>The last and final project of the webdesign week, was a group project. We got assigned a website, which we had to redesign. All of the content was therefore made. The only thing we had to worry about, was how to keep the original idea into a brand new desing.
+              <br><br>
+              To get access to the webpage:
               <br>
-              username: keammd
+              Username: keammd
               <br>
-              password: code_2017 </p>
+              Password: code_2017 </p>
                         </figcaption>
                     </figure>
                 </a>
@@ -93,7 +97,8 @@
                         <img src="pictures/mobile.png" alt="A girl decorating a tree for christmas.">
                         <figcaption class="caption">
                             <h3 class="caption-title">First website - Mobile</h3>
-              <p>This website was only made for mobile - I tried creating a burger menu for the first time.</p>
+              <p>The first website I made, was only for mobile. The assigment was to make a website, which shows a specific art style. Our artstyle for this assignment was naïve art, which of course had to be well thought of when designing the logo, as well as when designing the intere website.
+              <br>Here you can see my first attempt of making a burger menu.</p>
                         </figcaption>
                     </figure>
                 </a>
@@ -104,7 +109,7 @@
                         <img src="pictures/responsive.png" alt="Wineyards from Italy.">
                         <figcaption class="caption">
                             <h3 class="caption-title">Website, responsive</h3>
-              <p>Wineyards, beautiful trees and old houses. Italy when it looks the best. Just pure beauty in one painting.</p>
+              <p>Our secound attempt of making a website, was to make the same site as the first week, but now it had to be responsive. The content would therefore be the same, now it just had to work both to a mobile screen and to a computer screen. I choose to upgrade my burger menu a little, making it a site menu.</p>
                         </figcaption>
                     </figure>
                 </a>
