--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
 </section>
 
 
-<div class="container" id="wrapperAbout">
+<div class="container" id="wrapperContact">
   <form id="contact" action="mailto:mj.design@outlook.dk?subject=Questions" name="kontaktFormular" enctype="text/plain" method="post">
     <h3>Quick Contact</h3>
     <h4>Contact us today, and get reply with in 24 hours!</h4>
