--- a/projects.html
+++ b/projects.html
@@ -68,7 +68,7 @@
               <figcaption class="caption">
                 <h1>Projects</h1>
                     <br>
-                    <p>Through the first half year of my education on kea, i have worked with basic web design, basic animation, basic user experience and basic video. This site is going to show you some of my projects within these areas.
+                    <p>Through the first half year of my education on KEA, I have worked with basic web design, basic animation, basic user experience and basic video. This site is going to show you some of my projects within these areas.
                     <br><br>
                 </p>
               </figcaption>
