--- a/basic-animation.html
+++ b/basic-animation.html
@@ -71,7 +71,7 @@
       <p>In the weeks of basic animation, we where taught how to use JavaScript to make our items move online. We had to draw and design characters, which had move with either spritesheets or just my moving the character on the screen.
       <br>
       The animation could be sound or motion, giving the character life.
-      <br>
+      <br><br>
 </p></figcaption>
             </li>
             <li class="card-item double">
@@ -80,7 +80,8 @@
                         <img class="gif" src="pictures/sheep.gif" alt="A man fishing.">
                         <figcaption class="caption">
                             <h3 class="caption-title">Moving Characters</h3>
-              <p>Fishing can be exciting. When a duck tries to get your fish. But just remember - It's your fish. </p>
+              <p>A character can move many ways. This little sheep was my first animation. The assignment was to make a character react in 12 different ways. Try clicking on the different verbs making the sheep react.
+                </p>
                         </figcaption>
                     </figure>
                 </a>
@@ -92,7 +93,7 @@
                         <figcaption class="caption">
                             <h3 class="caption-title">Character design</h3>
               <p>Character design is  more than just drawing a person, it's giving something life. It's about telling the story of the person. Who is this? What is his main goal? How is he working social?
-                <br>
+                <br><br>
               It has to be considered which colors should be chosen to this person. Each color has a different meaning, so everything has to be taking into consideration.</p>
                         </figcaption>
                     </figure>
@@ -104,18 +105,33 @@
                         <img src="pictures/penguin.png" alt="Wineyards from Italy.">
                         <figcaption class="caption">
                             <h3 class="caption-title">P-Rex on adventure</h3>
-              <p>Wineyards, beautiful trees and old houses. Italy when it looks the best. Just pure beauty in one painting.</p>
+              <p>After a week of character design, we had to make our characters react. For this we had two days in pairs of two. In my group we decided to work on my teammates character p-rex. A little penguin trying to fly.</p>
                         </figcaption>
                     </figure>
                 </a>
             </li>
+
+            <li class="card-item double">
+                <a href="http://www.kmjdesign.dk/webpage/the-big-sleep/" target="_blank">
+                    <figure class="card">
+                        <img src="pictures/big-sleep.jpg" alt="An air balloon made of a lightbulp.">
+                        <figcaption class="caption">
+                            <h3 class="caption-title">The Big Sleep</h3>
+              <p>In the last couple of weeks of basic animation, we got the assignment to design a teaser for a black and white movie. The target group had to be 15-17 y/o people, with a engineer thinking background. We got the movie "the Big Sleep"
+                <br><br>
+              The user had to be actively involved in the teaser, making it an  interactive teaser.</p>
+                        </figcaption>
+                    </figure>
+                </a>
+            </li>
+
             <li class="card-item">
                 <a href="http://kmjdesign.dk/webpage/calculator/" target="_blank">
                     <figure class="card">
                         <img src="pictures/calculator.png" alt="An air balloon made of a lightbulp.">
                         <figcaption class="caption">
                             <h3 class="caption-title">Project Pool - Calculator</h3>
-              <p>Just one day - Go up to the stars with my in a balloon of ideas. Take me to the moon and keep dreaming.</p>
+              <p>Project Pool was two days where we had to solve a task using only HTML, CSS and JavaScript and our own imagination. The first task was to create a calculator, which could be used during the day.</p>
                         </figcaption>
                     </figure>
                 </a>
@@ -126,29 +142,19 @@
                         <img src="pictures/drumset.png" alt="An air balloon made of a lightbulp.">
                         <figcaption class="caption">
                             <h3 class="caption-title">Project Pool - Drum</h3>
-              <p>Just one day - Go up to the stars with my in a balloon of ideas. Take me to the moon and keep dreaming.</p>
+              <p>For the second day the task was to create a drum play, that plays when you use the keyboard. We made it play both when you click on the screen and when you click on the keyboard. To make it more playfull for the user, we made the buttons chance color when pressed and drop a color around it.</p>
                         </figcaption>
                     </figure>
                 </a>
             </li>
 
-            <li class="card-item">
-                <a href="http://www.kmjdesign.dk/webpage/the-big-sleep/" target="_blank">
-                    <figure class="card">
-                        <img src="pictures/big-sleep.jpg" alt="An air balloon made of a lightbulp.">
-                        <figcaption class="caption">
-                            <h3 class="caption-title">The Big Sleep</h3>
-              <p>Just one day - Go up to the stars with my in a balloon of ideas. Take me to the moon and keep dreaming.</p>
-                        </figcaption>
-                    </figure>
-                </a>
-            </li>
+
 
             <li class="card-item">
               <figcaption class="caption">
                 <h1>How to...</h1>
                     <br>
-                    <p>In these weeks we where taught to use Illustrator for character design and JavaScript to make our characters move.
+                    <p>The character design was done in Illustrator.
                     <br><br>
                 </p>
               </figcaption>
