--- a/basic-ux.html
+++ b/basic-ux.html
@@ -68,28 +68,29 @@
 <figcaption class="caption">
   <h1>Basic UX</h1>
       <br>
-      <p>Through the first half year of my education on kea, i have worked with basic web design, basic animation, basic user experience and basic video. This site is going to show you some of my projects within these areas.
+      <p>Basic UX was all about the user. How does the user think, react and
       <br><br>
 </p></figcaption>
             </li>
             <li class="card-item double">
-                <a href="http://www.kmjdesign.dk/portfolio/reKreate_report.pdf" target="_blank">
-                    <figure class="card">
-                        <img src="pictures/rekreate.jpg" alt="A man fishing.">
-                        <figcaption class="caption">
-                            <h3 class="caption-title">Report - idea presentation</h3>
-              <p>Fishing can be exciting. When a duck tries to get your fish. But just remember - It's your fish. </p>
-                        </figcaption>
-                    </figure>
-                </a>
-            </li>
-            <li class="card-item">
                 <a href="http://www.kmjdesign.dk/webpage/rekreate/" target="_blank">
                     <figure class="card">
                         <img src="pictures/rekreate-web.png" alt="A girl decorating a tree for christmas.">
                         <figcaption class="caption">
                             <h3 class="caption-title">ReKreate Website</h3>
               <p>Take your best friend out on a trip to spread out the love that's growing in your heart.</p>
+                        </figcaption>
+                    </figure>
+                </a>
+
+            </li>
+            <li class="card-item">
+                <a href="http://www.kmjdesign.dk/portfolio/reKreate_report.pdf" target="_blank">
+                    <figure class="card">
+                        <img src="pictures/rekreate.jpg" alt="A man fishing.">
+                        <figcaption class="caption">
+                            <h3 class="caption-title">Report - idea presentation</h3>
+              <p>Fishing can be exciting. When a duck tries to get your fish. But just remember - It's your fish. </p>
                         </figcaption>
                     </figure>
                 </a>
@@ -107,12 +108,10 @@
             </li>
             <li class="card-item">
               <figcaption class="caption">
-                    <p>All off the videos in this project was filmed with a phone and a gimble. The gimble was helping giving a steady filming, which improves the experience for the user.
-                    <br><br>
-                    After filming all of the editing was done with Adobes Premiere Pro. With this program we where able to make mask, tracing the people of the video, and making a fluent video combined with the music.
-                    <br><br>
-                    If you are interested in more knowledge of how the idea came to life, you can see the storyboard, which gave life to City Walk and Meetup. <a href="http://kmjdesign.dk/portfolio/story-board-city.pdf" target="_blank">Find the storyboard here.</a>
-              </p></figcaption>
+                <p>
+
+                </p>
+              </figcaption>
             </li>
 
 
