--- a/basic-animation.html
+++ b/basic-animation.html
@@ -58,11 +58,16 @@
    </div>
 </section>
 
+
+<ul class="breadcrumb">
+  <li><a href="projects.html">Projects</a></li>
+  <li>Basic Animation</li>
+</ul>
+
+
+
     <main id="content" class="main-area">
-
-
-
-        <ul class="cards">
+        <ul class="cards" id="cardsBasicAnimation">
 
             <li class="card-item">
 <figcaption class="caption">
