--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
       <br><br>
       My name is Karoline, I am 22 years old and study to become a multimedia designer.</p>
       <br><br>
+      <img id="signature" src="pictures/underskrift.png" alt="This is the little piggie">
   </div>
 
   <div class="thinking">
