--- a/basic-video.html
+++ b/basic-video.html
@@ -103,7 +103,9 @@
                     <br><br>
                     After filming all of the editing was done with Adobes Premiere Pro. With this program we where able to make mask, tracing the people of the video, and making a fluent video combined with the music.
                     <br><br>
-                    If you are interested in more knowledge of how the idea came to life, you can see the storyboard, which gave life to City Walk and Meetup. <a href="http://kmjdesign.dk/portfolio/story-board-city.pdf" target="_blank">Find the storyboard here.</a>
+                    If you are interested in more knowledge of how the idea came to life, you can see the storyboard, which gave life to City Walk and Meetup.
+                    <br><br>
+                    <a href="http://kmjdesign.dk/portfolio/story-board-city.pdf" target="_blank">Find the storyboard here.</a>
               </p></figcaption>
             </li>
         </ul>
