--- a/about.html
+++ b/about.html
@@ -113,6 +113,14 @@
 </div>
 
 
+  <div>
+    <img id="drowning" src="pictures/drowning.png" alt="This is the little piggie">
+    <br>
+  </div>
+  <div>
+    <img id="drowning-small" src="pictures/drowning-small.png" alt="This is the little piggie">
+    <br>
+  </div>
 
 <footer class="colophon">
     <a href="https://www.facebook.com/karoline.meyerjacobsen" class="fa fa-facebook"></a>
