--- a/basic-ux.html
+++ b/basic-ux.html
@@ -72,7 +72,11 @@
 <figcaption class="caption">
   <h1>Basic UX</h1>
       <br>
-      <p>Basic UX was all about the user. How does the user think, react and
+      <p>Basic UX was all about the user. How does the user think, react and how to generally make a business work. When creating a business, theres a lot to consider, such as how do we get the costumers attention, how will the cost structure be, which resorurces have we, who is the competition and who might be partners to the project.
+      <br><br>
+      Our main idea was to create an app which would collect your reciepts and help you organize your expensis. If you are currious about the business ideas behind it, you can see the business model here:
+      <br><br>
+      <a href="http://kmjdesign.dk/webpage/business-model-canvas.jpg" target="_blank">Business Model Canvas</a>
       <br><br>
 </p></figcaption>
             </li>
