--- a/basic-ux.html
+++ b/basic-ux.html
@@ -86,7 +86,9 @@
                         <img src="pictures/rekreate-web.png" alt="A girl decorating a tree for christmas.">
                         <figcaption class="caption">
                             <h3 class="caption-title">ReKreate Website</h3>
-              <p>Take your best friend out on a trip to spread out the love that's growing in your heart.</p>
+              <p>In the ending of the theme, we had to presesnt our idea in front of the class. To help present our project, we had to code a website which showed our company.
+                <br><br>
+              Together with our website, we had a PowerPoint presentation, which was to support our subject and make it more convincing for the client.</p>
                         </figcaption>
                     </figure>
                 </a>
@@ -97,8 +99,10 @@
                     <figure class="card">
                         <img src="pictures/rekreate.jpg" alt="A man fishing.">
                         <figcaption class="caption">
-                            <h3 class="caption-title">Report - idea presentation</h3>
-              <p>Fishing can be exciting. When a duck tries to get your fish. But just remember - It's your fish. </p>
+                            <h3 class="caption-title">Report - idea & presentation</h3>
+              <p>In the first report, you can read about our companys vision, mission and values. We had defined a target group, which was the primary audience to our product. In this report, you will find the costumers journey, explaining how the generel app will help the user.</p>
+              <br>
+              <h3>Read report &nbsp;&nbsp; &rarr;</h3>
                         </figcaption>
                     </figure>
                 </a>
@@ -110,6 +114,8 @@
                         <figcaption class="caption">
                             <h3 class="caption-title">Report - Style guide</h3>
               <p>Take your best friend out on a trip to spread out the love that's growing in your heart.</p>
+              <br>
+              <h3>Read report &nbsp;&nbsp; &rarr;</h3>
                         </figcaption>
                     </figure>
                 </a>
