--- a/about.html
+++ b/about.html
@@ -59,58 +59,53 @@
 
 </section>
 
-<div class="wrapper" id="wrapperAbout">
-  <div class="aboutMe">
-      <h1>Who am i?</h1>
-      <br>
-      <p id="me"><img src="pictures/karo.JPG" id="portrait" alt="picture of me"></p>
-      <p>My name is Karoline, I'm a web developer under education - currently I study to become a multimedia designer at KEA Copenhagen.</p>
-      <br>
-      <p>As a part time job, I work for the company Lomax in their online marketing department, writing SEO, analyzing customer habits and planning events for our customers.</p>
-      <br>
-      <p>
-      When I don't work or study, I like to relax with a brush and some paint - For fun I like to paint with acrylics, which can be seen around my house and on my social medias.
-    </p>
-    <br>
 
- </div>
+<main id="content" class="main-area">
+  <ul class="cards" id="cardsAbout">
+      <li class="card-item">
+        <figcaption class="caption">
+          <h1>Who am i?</h1>
+          <br>
+          <p id="me"><img src="pictures/karo.JPG" id="portrait" alt="picture of me"></p>
+          <p>My name is Karoline, I'm a web developer under education - currently I study to become a multimedia designer at KEA Copenhagen.</p>
+          <br>
+          <p>As a part time job, I work for the company Lomax in their online marketing department, writing SEO, analyzing customer habits and planning events for our customers.</p>
+          <br>
+          <p>
+          When I don't work or study, I like to relax with a brush and some paint - For fun I like to paint with acrylics, which can be seen around my house and on my social medias.
+          </p>
+        </figcaption>
+      </li>
+      <li class="card-item">
+        <figcaption class="caption">
+          <h1>Basic Info</h1>
+          <p class="photosAbout"><img id="information" src="pictures/info.png" alt="This is the little piggie"></p>
+        </figcaption>
+      </li>
+      <li class="card-item ">
+        <figcaption class="caption">
+          <h1>My Skills</h1>
+          <p class="photosAbout"><img id="skills" src="pictures/skills.png" alt="This is the little piggie"></p>
+          <p>Through my study and my general interest for the technology and development, I have acquired a certain set of skills. Currently I am working with programing: HTML, CSS and JavaScript.</p>
+          <br>
+          <p>Other programs i am using:</p>
+          <p class="photosAbout"><img id="programs" src="pictures/programs.png" alt="This is the little piggie"></p>
+          <br><br>
+        </figcaption>
+       </li>
 
-  <div class="info">
-    <h1>Basic Info</h1>
-  <img id="information" src="pictures/info.png" alt="This is the little piggie">
-<!--
 
-    <ul>Karoline Meyer-Jacobsen</ul>
-    <ul>07.09.1995</ul>
-    <ul>+45 26158927</ul>
-    <ul>Karoline_MJ@hotmail.com</ul>
-    <ul>Copenhagen, Denmark</ul>
+      <li class="card-item">
+        <figcaption class="caption">
+          <h1>Words about me</h1>
+          <p class="photosAbout"><img id="words" src="pictures/words.png" alt="This is the little piggie"></p>
+        </figcaption>
+      </li>
+  </ul>
+</main>
 
--->
 
-      <br>
-  </div>
 
-  <div class="skills">
-    <h1>My Skills</h1>
-    <img id="skills" src="pictures/skills.png" alt="This is the little piggie">
-    <p>Through my study and my general interest for the technology and development, I have acquired a certain set of skills. Currently I am working with programing: HTML, CSS and JavaScript.</p>
-    <br>
-    <p>Other programs i am using:</p>
-    <img id="programs" src="pictures/programs.png" alt="This is the little piggie">
-      <br><br>
-  </div>
-
-  <div>
-    <h1>Words about me</h1>
-    <img id="words" src="pictures/words.png" alt="This is the little piggie">
-    <br>
-  </div>
-
-  <div>
-    <p>Do you want to know more? You can <a href="http://www.kmjdesign.dk/portfolio/CV.pdf" target="_blank">read my CV</a> or contact me for further information.</p>
-  </div>
-</div>
 
 
   <div>
@@ -121,6 +116,10 @@
     <img id="drowning-small" src="pictures/drowning-small.png" alt="This is the little piggie">
     <br>
   </div>
+
+<div id="CV-box">
+    <p id="CV-text">Do you want to know more? You can <a href="http://www.kmjdesign.dk/portfolio/CV.pdf" target="_blank">read my CV</a> or contact me for further information.</p><br>
+</div>
 
 <footer class="colophon">
     <a href="https://www.facebook.com/karoline.meyerjacobsen" class="fa fa-facebook"></a>
