--- a/basic-video.html
+++ b/basic-video.html
@@ -71,8 +71,7 @@
               <figcaption class="caption">
                 <h1>Basic Video</h1>
                     <br>
-                    <p>The video weeks where so much fun! We had to be creative with a camera, thinking of new ways to show the audience our ideas.
-                    <br><br>
+                    <p>The video weeks where so much fun! We had to be creative with a camera, thinking of new ways to show the audience our ideas. The video theme lasted only two weeks, so the learning was intense and you had to be awake to keep up. In generel much of the learning of how to use the programs when editing and the finishing touches is much self taught knowledge.
               </p></figcaption>
             </li>
             <li class="card-item double">
