--- a/basic-ux.html
+++ b/basic-ux.html
@@ -72,12 +72,11 @@
 <figcaption class="caption">
   <h1>Basic UX</h1>
       <br>
-      <p>Basic UX was all about the user. How does the user think, react and how to generally make a business work. When creating a business, theres a lot to consider, such as how do we get the costumers attention, how will the cost structure be, which resorurces have we, who is the competition and who might be partners to the project.
+      <p>Basic UX was all about the user. How does the user think, react and how to generally make a business work? When creating a business, there's a lot to consider, such as how do we get the costumers attention, how will the cost structure be, which resources have we, who is the competition and who might be partners to the project.
       <br><br>
-      Our main idea was to create an app which would collect your reciepts and help you organize your expensis. If you are currious about the business ideas behind it, you can see the business model here:
+      Our main idea was to create an app which would collect your receipts and help you organize your expenses. If you are curious about the business ideas behind it, you can see the business model here:
       <br><br>
       <a href="http://kmjdesign.dk/webpage/business-model-canvas.jpg" target="_blank">Business Model Canvas</a>
-      <br><br>
 </p></figcaption>
             </li>
             <li class="card-item double">
@@ -86,7 +85,7 @@
                         <img src="pictures/rekreate-web.png" alt="A girl decorating a tree for christmas.">
                         <figcaption class="caption">
                             <h3 class="caption-title">ReKreate Website</h3>
-              <p>In the ending of the theme, we had to presesnt our idea in front of the class. To help present our project, we had to code a website which showed our company.
+              <p>In the ending of the theme, we had to present our idea in front of the class. To help present our project, we had to code a website which showed our company.
                 <br><br>
               Together with our website, we had a PowerPoint presentation, which was to support our subject and make it more convincing for the client.</p>
                         </figcaption>
@@ -100,7 +99,7 @@
                         <img src="pictures/rekreate.jpg" alt="A man fishing.">
                         <figcaption class="caption">
                             <h3 class="caption-title">Report - idea & presentation</h3>
-              <p>In the first report, you can read about our companys vision, mission and values. We had defined a target group, which was the primary audience to our product. In this report, you will find the costumers journey, explaining how the generel app will help the user.</p>
+              <p>In the first report, you can read about our company’s vision, mission and values. We had defined a target group, which was the primary audience to our product. In this report, you will find the costumers journey, explaining how the general app will help the user.</p>
               <br>
               <h3>Read report &nbsp;&nbsp; &rarr;</h3>
                         </figcaption>
@@ -113,7 +112,7 @@
                         <img src="pictures/style-guide.png" alt="A girl decorating a tree for christmas.">
                         <figcaption class="caption">
                             <h3 class="caption-title">Report - Style guide</h3>
-              <p>Take your best friend out on a trip to spread out the love that's growing in your heart.</p>
+              <p>The style guide, was explaining all our thoughts behind the design. To design and create a website and an app are not easy. Every color, picture and setup have to be well considered and has to be chosen for a reason. In this report you can read about our thought behind the design.</p>
               <br>
               <h3>Read report &nbsp;&nbsp; &rarr;</h3>
                         </figcaption>
