--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
   <ul class="cards" id="cardsAbout">
       <li class="card-item">
         <figcaption class="caption">
-          <h1>Who am i?</h1>
+          <h1>Who am I?</h1>
           <br>
           <p id="me"><img src="pictures/karo.JPG" id="portrait" alt="picture of me"></p>
           <p>My name is Karoline, I'm a web developer under education - currently I study to become a multimedia designer at KEA Copenhagen.</p>
