--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
           <h1>Who am I?</h1>
           <br>
           <p id="me"><img src="pictures/karo.JPG" id="portrait" alt="picture of me"></p>
-          <p>My name is Karoline, I'm a web developer under education - currently I study to become a multimedia designer at KEA Copenhagen.</p>
+          <p>Hello there! My name is Karoline, I'm a webdesigner - currently I study to become a multimedia designer at KEA Copenhagen.</p>
           <br>
           <p>As a part time job, I work for the company Lomax in their online marketing department, writing SEO, analyzing customer habits and planning events for our customers.</p>
           <br>
