--- a/basic-animation.html
+++ b/basic-animation.html
@@ -73,7 +73,7 @@
 <figcaption class="caption">
   <h1>Basic Animation</h1>
       <br>
-      <p>In the weeks of basic animation, we where taught how to use JavaScript to make our items move online. We had to draw and design characters, which had move with either spritesheets or just my moving the character on the screen.
+      <p>In the weeks of basic animation, we were taught how to use JavaScript to make our items move online. We had to draw and design characters, which had move with either sprite sheets or just my moving the character on the screen.
       <br>
       The animation could be sound or motion, giving the character life.
       <br><br>
@@ -97,9 +97,9 @@
                         <img src="pictures/computer.jpg" alt="A girl decorating a tree for christmas.">
                         <figcaption class="caption">
                             <h3 class="caption-title">Character design</h3>
-              <p>Character design is  more than just drawing a person, it's giving something life. It's about telling the story of the person. Who is this? What is his main goal? How is he working social?
+              <p>Character design is more than just drawing a person, it's giving something life. It's about telling the story of the person. Who is this? What is his main goal? How is he working social?
                 <br><br>
-              It has to be considered which colors should be chosen to this person. Each color has a different meaning, so everything has to be taking into consideration.</p>
+              It must be considered which colors should be chosen to this person. Each color has a different meaning, so everything must be taking into consideration.</p>
                         </figcaption>
                     </figure>
                 </a>
@@ -124,7 +124,7 @@
                             <h3 class="caption-title">The Big Sleep</h3>
               <p>In the last couple of weeks of basic animation, we got the assignment to design a teaser for a black and white movie. The target group had to be 15-17 y/o people, with a engineer thinking background. We got the movie "the Big Sleep"
                 <br><br>
-              The user had to be actively involved in the teaser, making it an  interactive teaser.</p>
+              The user had to be actively involved in the teaser, making it an interactive teaser.</p>
                         </figcaption>
                     </figure>
                 </a>
@@ -147,7 +147,7 @@
                         <img src="pictures/drumset.png" alt="An air balloon made of a lightbulp.">
                         <figcaption class="caption">
                             <h3 class="caption-title">Project Pool - Drum</h3>
-              <p>For the second day the task was to create a drum play, that plays when you use the keyboard. We made it play both when you click on the screen and when you click on the keyboard. To make it more playfull for the user, we made the buttons chance color when pressed and drop a color around it.</p>
+              <p>For the second day the task was to create a drum play, that plays when you use the keyboard. We made it play both when you click on the screen and when you click on the keyboard. To make it more playful for the user, we made the buttons chance color when pressed and drop a color around it.</p>
                         </figcaption>
                     </figure>
                 </a>
@@ -159,7 +159,11 @@
               <figcaption class="caption">
                 <h1>How to...</h1>
                     <br>
-                    <p>The character design was done in Illustrator.
+                    <p>When designing my characters, I started with drawing in hand and afterwards I would draw the same character in Illustrator. When drawing in Illustrator, you get a vectorized person, which is easier to manipulate with if the size must change at some point.
+                    <br><br>
+                    When a character is done, the next step is to animate it. To make a proper animation, you have to think about how the character should move and make sure all of it is drawn.
+                    <br><br>
+                    An example would be if you have to make a character walk, he has to move his legs - if he doesn't move his legs, it looks like he is floating over the screen, which of course isn't natural. Therefore you have to draw every step and movement. Which you after can animate with code.
                     <br><br>
                 </p>
               </figcaption>
